[package]
name = "rsfunceble"
version = "0.0.7"
edition = "2021"
authors = ["Zander Lewis <zander@zanderlewis.dev>"]
description = "PyFunceble rewritten in Rust with concurrency and speed in mind."
license = "MIT"
repository = "https://github.com/zanderlewis/rsfunceble"
readme = "README.md"
keywords = ["funceble", "rsfunceble", "concurrency", "speed", "lookup"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
trust-dns-resolver = "0.23"
whois-rust = "1.6.0"
clap = { version = "4.0", features = ["derive"] }
url = "2.5.2"
futures = "0.3"
colored = "2.0"
serde_json = "1.0"
