[package]
name = "rsfunceble"
version = "0.0.8"
edition = "2021"
authors = ["Zander Lewis <zander@zanderlewis.dev>"]
description = "PyFunceble rewritten in Rust with concurrency and speed in mind."
license = "MIT"
repository = "https://github.com/zanderlewis/rsfunceble"
readme = "README.md"
keywords = ["funceble", "rsfunceble", "concurrency", "speed", "lookup"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
colored = "2.0"
